--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,12 +30,5 @@
   </div>
   <hr>
 </div>
-<div class="container">
-  <div class="row">
-    <div class="col">
-      <div *ngFor="let persona of personas; let i = index">
-        {{i+1}}. {{persona.nombre}} {{persona.apellido}}
-      </div>
-    </div>
-  </div>
-</div>
+<app-persona *ngFor="let elementPersona of personas; let i = index" [persona]="elementPersona" [indice]="i">
+</app-persona>
