--- a/src/app/formulario/formulario.component.html
+++ b/src/app/formulario/formulario.component.html
@@ -4,15 +4,21 @@
             <div class="form-group col-md-2">
                 <!-- <label for="nom">Nombre:</label> -->
                 <input type="text" id="nom" name="nombre" class="form-control" placeholder="Escribe tu nombre"
-                    [(ngModel)]="nombreInput">
+                    #nombreInput>
+                <!-- comentado por clase de referecia local en angular -->
+                <!-- <input type="text" id="nom" name="nombre" class="form-control" placeholder="Escribe tu nombre"
+                        [(ngModel)]="nombreInput"> -->
             </div>
             <div class="form-group col-md-2">
                 <!-- <label for="ape">Apellido:</label> -->
                 <input type="text" id="ape" name="apellido" class="form-control" placeholder="Escribe tu apellido"
-                    [(ngModel)]="apellidoInput">
+                    #apellidoInput>
+                <!-- comentado por clase de referecia local en angular -->
+                <!-- <input type="text" id="ape" name="apellido" class="form-control" placeholder="Escribe tu apellido"
+                    [(ngModel)]="apellidoInput"> -->
             </div>
             <div class="form-group col-md-2">
-                <button (click)="agregarPersona()" class="btn btn-primary" type="submit">Agregar persona</button>
+                <button (click)="agregarPersona(nombreInput,apellidoInput)" class="btn btn-primary" type="submit">Agregar persona</button>
             </div>
             <div class="form-group col-md-2" *ngIf="showMessage; else listaDesplegada">
                 {{mensaje}}
