--- a/src/app/formulario/formulario.component.html
+++ b/src/app/formulario/formulario.component.html
@@ -18,7 +18,9 @@
                     [(ngModel)]="apellidoInput"> -->
             </div>
             <div class="form-group col-md-2">
-                <button (click)="agregarPersona(nombreInput,apellidoInput)" class="btn btn-primary" type="submit">Agregar persona</button>
+                <!-- COMENTADO POR CLASE VIEW CHILD -->
+                <!-- <button (click)="agregarPersona(nombreInput,apellidoInput)" class="btn btn-primary" type="submit">Agregar persona</button> -->
+                <button (click)="agregarPersona()" class="btn btn-primary" type="submit">Agregar persona</button>
             </div>
             <div class="form-group col-md-2" *ngIf="showMessage; else listaDesplegada">
                 {{mensaje}}
