--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,9 @@
     <h3>{{titulo}}</h3>
   </div>
   <hr>
- <app-formulario (personaCreada)="personaEmitida($event)">
+  <!-- COMENTADO POR CLASE DATA SERVICE EN ANGULAR -->
+ <!-- <app-formulario (personaCreada)="personaEmitida($event)"> -->
+ <app-formulario>
  </app-formulario>
   <hr>
 </div>
