--- a/src/app/persona/persona.component.html
+++ b/src/app/persona/persona.component.html
@@ -3,6 +3,7 @@
         <div class="col">
             <div >
                 {{indice+1}}. {{persona.nombre}} {{persona.apellido}}
+                <button type="submit" class="btn btn-warning" (click)="emitirSaludo()">Editar</button>
             </div>
         </div>
     </div>
