--- a/src/app/personas/formulario/formulario.component.html
+++ b/src/app/personas/formulario/formulario.component.html
@@ -1,3 +1,5 @@
+<!-- <button class="btn btn-info" routerLink="/view-person">Ir a ver persona</button> -->
+
 <div class="row mb-3">
     <div class="col">
         <form class="row">
