--- a/src/app/personas/formulario/formulario.component.html
+++ b/src/app/personas/formulario/formulario.component.html
@@ -2,11 +2,11 @@
 
 <div class="row mb-3">
     <div class="col">
-        <form class="row">
+        <form class="row" #ngF="ngForm" (ngSubmit)="ngF.form.valid && onGuardarPersona()">
             <div class="form-group col-md-2">
                 <!-- <label for="nom">Nombre:</label> -->
                 <input type="text" id="nom" name="nombre" class="form-control" placeholder="Escribe tu nombre"
-                    #nombreInput>
+                    #nombreInput required>
                 <!-- comentado por clase de referecia local en angular -->
                 <!-- <input type="text" id="nom" name="nombre" class="form-control" placeholder="Escribe tu nombre"
                         [(ngModel)]="nombreInput"> -->
@@ -14,7 +14,7 @@
             <div class="form-group col-md-2">
                 <!-- <label for="ape">Apellido:</label> -->
                 <input type="text" id="ape" name="apellido" class="form-control" placeholder="Escribe tu apellido"
-                    #apellidoInput>
+                    #apellidoInput required>
                 <!-- comentado por clase de referecia local en angular -->
                 <!-- <input type="text" id="ape" name="apellido" class="form-control" placeholder="Escribe tu apellido"
                     [(ngModel)]="apellidoInput"> -->
@@ -22,7 +22,7 @@
             <div class="form-group col-md-2">
                 <!-- COMENTADO POR CLASE VIEW CHILD -->
                 <!-- <button (click)="agregarPersona(nombreInput,apellidoInput)" class="btn btn-primary" type="submit">Agregar persona</button> -->
-                <button (click)="agregarPersona()" class="btn btn-primary" type="submit">Agregar persona</button>
+                <button class="btn btn-primary" type="submit">Agregar persona</button>
             </div>
             <div class="form-group col-md-2" *ngIf="showMessage; else listaDesplegada">
                 {{mensaje}}
