--- a/src/app/personas/persona/persona.component.html
+++ b/src/app/personas/persona/persona.component.html
@@ -3,7 +3,7 @@
         <div class="col">
             <div >
                 {{indice+1}}. {{persona.nombre}} {{persona.apellido}}
-                <button type="submit" class="btn btn-warning" (click)="emitirSaludo()">Editar</button>
+                <a [routerLink]="['/personas/',indice]">Edit</a>
             </div>
         </div>
     </div>
