--- a/src/app/personas/persona/persona.component.html
+++ b/src/app/personas/persona/persona.component.html
@@ -3,7 +3,10 @@
         <div class="col">
             <div >
                 {{indice+1}}. {{persona.nombre}} {{persona.apellido}}
-                <a [routerLink]="['/personas/',indice]">Edit</a>
+                <a 
+                [routerLink]="['/personas/',indice]"
+                [queryParams]="{modoEdicion:'1'}"
+                >Edit</a>
             </div>
         </div>
     </div>
